cabal-version:       >=1.10

name:                futhark-rev-ad
version:             0.1.0.0
license-file:        LICENSE
author:              zfnmxt
maintainer:          zfnmxt@zfnmxt.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable futhark-ad
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14, mtl, futhark
  default-language:    Haskell2010
